<resources>
    <string name="app_title">"Reminder"</string>
    <string name="app_name">"Reminder"</string>
    <string name="app_name_pro">"Reminder PRO"</string>
    <string name="action_settings">"Settings"</string>
    <string name="copyright">2026 © Nazar Sukhovych</string>
    <string name="cant_access_location_services">I cannot get access to the location services!</string>
    <string name="normal">Normal</string>
    <string name="satellite">Satellite</string>
    <string name="terrain">Terrain</string>
    <string name="hybrid">Hybrid</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="yellow">Yellow</string>
    <string name="pink">Pink</string>
    <string name="action">Action</string>
    <string name="make_call">Make call</string>
    <string name="sms">Send SMS</string>
    <string name="phone">Phone number</string>
    <string name="birthdays">Birthdays</string>
    <string name="check_automatically">Check automatically</string>
    <string name="interval">Interval</string>
    <string name="import_string">Import</string>
    <string name="google_drive">Google Drive™</string>
    <string name="dropbox">Dropbox</string>
    <string name="notes">Notes</string>
    <string name="home">Home</string>
    <string name="expand_navigation">Expand navigation</string>
    <string name="collapse_navigation">Collapse navigation</string>
    <string name="task">Task</string>
    <string name="note">Note</string>
    <string name="save">Save</string>
    <string name="show_in_status_bar">Show in status bar?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="add_reminder">Add reminder?</string>
    <string name="name">Name</string>
    <string name="background">Background</string>
    <string name="global_settings">Global settings</string>
    <string name="vibrate">Vibrate</string>
    <string name="infinite_vibrate">Infinite vibrate</string>
    <string name="voice_notification">Notify by voice (TTS)</string>
    <string name="language">Language</string>
    <string name="led_notification">LED notification</string>
    <string name="led_color">LED color</string>
    <string name="remind_at">Remind at</string>
    <string name="days_to_birthday">Days to birthday</string>
    <string name="permanent_status_bar_notification">Permanent notification in status bar</string>
    <string name="show_in_home_screen">Show in home screen widget</string>
    <string name="birthday_reminder">Birthday reminder</string>
    <string name="contacts">Contacts</string>
    <string name="no_events">No events</string>
    <string name="theme">Theme</string>
    <string name="calendar">Calendar</string>
    <string name="title">Title</string>
    <string name="color">Color</string>
    <string name="delete_all">Delete all</string>
    <string name="search">Search</string>
    <string name="text_size">Text size</string>
    <string name="exclusion">Exclusion</string>
    <string name="hours">Hours</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="message">Message</string>
    <string name="date_and_time">Date and time</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="time">Time</string>
    <string name="google_tasks">Google Tasks</string>
    <string name="add_to_calendar">Add to Calendar</string>
    <string name="address">Address</string>
    <string name="no_places">No places</string>
    <string name="tasks">Tasks</string>
    <string name="groups">Groups</string>
    <string name="places">Places</string>
    <string name="trash">Trash</string>
    <string name="feedback">Feedback</string>
    <string name="help">Help</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="no_notes">No notes</string>
    <string name="next_event">Next event</string>
    <string name="remind_me">Remind me…</string>
    <string name="repeat">Repeat</string>
    <string name="days">days</string>
    <string name="send">Send</string>
    <string name="radius">Radius</string>
    <string name="can_you_rate_this_application">Can you rate this application?</string>
    <string name="rate">Rate</string>
    <string name="later">Later</string>
    <string name="never">Never</string>
    <string name="url">Url…</string>
    <string name="application">Application</string>
    <string name="open_link">Open link</string>
    <string name="select_day">Select day</string>
    <string name="last_day">Last day</string>
    <string name="delay_tracking">Delay tracking</string>
    <string name="c">S</string>
    <string name="m">M</string>
    <string name="h">H</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thu">THU</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="sun">SUN</string>
    <string name="import_events">Import events</string>
    <string name="first_day">First day</string>
    <string name="today_color">Color for today</string>
    <string name="birthdays_color">Color for birthdays</string>
    <string name="show_reminders">Show reminders</string>
    <string name="reminders_color">Color for reminder</string>
    <string name="feature_events">Future events</string>
    <string name="show_calculated_feature_events">Show calculated future events in calendar</string>
    <string name="export_to_google_calendar">Export to Google Calendar</string>
    <string name="event_duration">Event duration</string>
    <string name="choose_calendar">Choose calendar</string>
    <string name="export_to_stock_calendar">Export to default calendar</string>
    <string name="automatically_backup">Automatically backup</string>
    <string name="cloud_services">Cloud services</string>
    <string name="clean">Clear data</string>
    <string name="backup_settings">Create backup of settings</string>
    <string name="_24_hour_time_format">24 hour</string>
    <string name="android_wear_notification">Wear OS notification</string>
    <string name="distance_notification">Notification about distance</string>
    <string name="map_type">Type of map</string>
    <string name="style_of_marker">Style of marker</string>
    <string name="tracking_settings">Tracking settings</string>
    <string name="appearance">Appearance</string>
    <string name="status_bar">Status bar</string>
    <string name="permanent_notification">Permanent notification</string>
    <string name="show_icon">Show icon</string>
    <string name="sound_and_vibration">Sound and vibration</string>
    <string name="notification">Notification</string>
    <string name="send_sms">Send SMS</string>
    <string name="launch_application">Launch application</string>
    <string name="enable_launching_application_automatically">Launch applications automatically</string>
    <string name="snooze_time">Snooze time</string>
    <string name="repeat_notification">Repeating of notification</string>
    <string name="personalization">Personalization</string>
    <string name="allow_customizing_notification">Allow customizing notification for each reminder</string>
    <string name="permissions">Permissions</string>
    <string name="allow_permission">Add permission</string>
    <string name="about">About</string>
    <string name="open_source_licenses">Open source software</string>
    <string name="tell_friends">Tell friends</string>
    <string name="default_string">Default</string>
    <string name="morning">Morning</string>
    <string name="day">Day</string>
    <string name="evening">Evening</string>
    <string name="night">Night</string>
    <string name="for_lower_battery_usage_set_bigger_values">For lower battery usage, set higher values!</string>
    <string name="saved">Saved</string>
    <string name="voice_control">Voice control</string>
    <string name="image">Image</string>
    <string name="font_style">Font style</string>
    <string name="share">Share</string>
    <string name="copy">Make copy</string>
    <string name="grid_view">Grid view</string>
    <string name="order">Order</string>
    <string name="add_birthday">Add birthday</string>
    <string name="active_reminders">Active reminders</string>
    <string name="events">Events</string>
    <string name="must_be_not_empty">Must not be empty!</string>
    <string name="other_version_detected">Other application detected!</string>
    <string name="open">Open</string>
    <string name="syncing_groups">Syncing groups…</string>
    <string name="syncing_reminders">Syncing reminders…</string>
    <string name="syncing_notes">Syncing notes…</string>
    <string name="syncing_birthdays">Syncing birthdays…</string>
    <string name="error_sending">Error sending!</string>
    <string name="delete_this_note">Delete this note?</string>
    <string name="gallery">Gallery</string>
    <string name="take_a_shot">Take a shot</string>
    <string name="repeat_limit">Limit of repeats</string>
    <string name="by_date">By date</string>
    <string name="timer">Timer</string>
    <string name="alarm">Alarm clock</string>
    <string name="location">Location</string>
    <string name="day_of_month">Day of month</string>
    <string name="shopping_list">Shopping list</string>
    <string name="todo">Todo</string>
    <string name="todo_items">Items</string>
    <string name="radius_x_m">"Radius %s m"</string>
    <string name="radius_x_ft">"Radius %s ft"</string>
    <string name="radius_x_km">"Radius %s km"</string>
    <string name="radius_x_mi">"Radius %s mi"</string>
    <string name="dist_x_m">"Distance %s m"</string>
    <string name="dist_x_ft">"Distance %s ft"</string>
    <string name="dist_x_km">"Distance %s km"</string>
    <string name="dist_x_mi">"Distance %s mi"</string>
    <string name="shopping_list_is_empty">Shopping list is empty!</string>
    <string name="you_dont_select_any_day">You did not select a day!</string>
    <string name="you_dont_select_application">You didn\'t select an application!</string>
    <string name="you_dont_insert_link">You didn\'t insert a link!</string>
    <string name="you_dont_select_place">You didn\'t select a place!</string>
    <string name="you_dont_insert_timer_time">You didn\'t select a time for the timer!</string>
    <string name="dark_orange">Dark orange</string>
    <string name="teal">Dark Green</string>
    <string name="select_one_of_item">Select one item!</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="local">Memory card</string>
    <string name="all">All</string>
    <string name="one_hour">1 hour</string>
    <string name="six_hours">6 hours</string>
    <string name="twelve_hours">12 hours</string>
    <string name="one_day">1 day</string>
    <string name="two_days">2 days</string>
    <string name="english">English</string>
    <string name="italian">Italian</string>
    <string name="polish">Polish</string>
    <string name="spanish">Spanish</string>
    <string name="ukrainian">Ukrainian</string>
    <string name="reminder">Reminder</string>
    <string name="builder_try_new_builder">Try new Builder</string>
    <string name="detach">Detach</string>
    <string name="legacy_builder_removal_alert">🚀 Deprecation Alert! 🚀</string>
    <string name="legacy_builder_removal_message">Heads-up! In the upcoming update, we\'ll be saying goodbye to the Legacy Reminder Builder. This decision will allow us to focus on improving the New Builder and overall performance.</string>
    <string name="first_day_of_the_week">First day of the week</string>
    <string name="google_calendar">Google Calendar</string>
    <string name="add_reminders_to_google_calendar">Add reminders to Google Calendar</string>
    <string name="scan_google_calendar_for_the_new_events">Scan Google Calendar for the new events</string>
</resources>