<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:colorBackground"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/list_margin"
        android:layout_marginEnd="@dimen/list_margin"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/collapse_toolbar_margin_top" />

        <com.elementary.tasks.core.views.PrefsView
            android:id="@+id/startDayPrefs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:prefs_divider_bottom="true"
            app:prefs_icon="@drawable/ic_fluent_calendar_week_start"
            app:prefs_primary_text="@string/first_day_of_the_week"
            app:prefs_type="none" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="8dp"
            android:text="@string/appearance"
            android:textAppearance="?textAppearanceTitleSmall"
            android:textColor="?colorTertiary" />

        <com.elementary.tasks.core.views.PrefsView
            android:id="@+id/todayColorPrefs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:prefs_divider_bottom="true"
            app:prefs_icon="@drawable/ic_fluent_color"
            app:prefs_primary_text="@string/today_color"
            app:prefs_type="view" />

        <com.elementary.tasks.core.views.PrefsView
            android:id="@+id/reminderColorPrefs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:prefs_divider_bottom="true"
            app:prefs_icon="@drawable/ic_fluent_color_fill"
            app:prefs_primary_text="@string/reminders_color"
            app:prefs_type="view" />

        <com.elementary.tasks.core.views.PrefsView
            android:id="@+id/birthdayColorPrefs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:prefs_divider_bottom="true"
            app:prefs_icon="@drawable/ic_fluent_food_cake"
            app:prefs_primary_text="@string/birthdays_color"
            app:prefs_type="view" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="8dp"
            android:text="@string/google_calendar"
            android:textAppearance="?textAppearanceTitleSmall"
            android:textColor="?colorTertiary" />

        <com.elementary.tasks.core.views.PrefsView
            android:id="@+id/selectCalendarPrefs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:prefs_divider_bottom="true"
            app:prefs_icon="@drawable/ic_fluent_calendar_star"
            app:prefs_primary_text="@string/choose_calendar"
            app:prefs_type="none" />

        <com.elementary.tasks.core.views.PrefsView
            android:id="@+id/exportToCalendarPrefs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:prefs_divider_bottom="true"
            app:prefs_icon="@drawable/ic_builder_google_calendar_add"
            app:prefs_primary_text="@string/add_reminders_to_google_calendar"
            app:prefs_type="check_switch" />

        <com.elementary.tasks.core.views.PrefsView
            android:id="@+id/scanCalendarPrefs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:prefs_divider_bottom="true"
            app:prefs_icon="@drawable/ic_fluent_calendar_sync"
            app:prefs_primary_text="@string/scan_google_calendar_for_the_new_events"
            app:prefs_type="check_switch" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_bottom_space" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>
