<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        style="?attr/materialCardViewElevatedStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/default_corner_radius"
        app:contentPadding="@dimen/default_content_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:text="@string/legacy_builder_removal_alert"
                    android:textAppearance="?textAppearanceTitleSmall"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/close_button"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:background="?selectableItemBackgroundBorderless"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/ic_fluent_dismiss"
                    app:tint="?colorOnSurface" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/legacy_builder_removal_message"
                android:textAppearance="?textAppearanceLabelLarge"
                android:textStyle="bold" />

            <Button
                android:id="@+id/try_button"
                style="@style/Widget.Material3.Button.TonalButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:text="@string/builder_try_new_builder" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</FrameLayout>
