<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/reminderContainer"
    style="@style/UiComponentDetailsCard"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    app:cardCornerRadius="5dp"
    app:contentPadding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginTop="4dp"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/ic_fluent_alert"
                app:tint="?colorOnSurface" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/reminderCardTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:text="@string/reminder"
                    android:textAppearance="?textAppearanceTitleSmall"
                    android:textColor="?colorOnSurface"
                    tools:ignore="RtlSymmetry" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/reminderSummary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textAppearance="?textAppearanceTitleMedium"
                    android:textColor="?colorOnSurface"
                    tools:text="Summary" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/reminderTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textAppearance="?textAppearanceTitleMedium"
                    android:textColor="?colorOnSurface"
                    tools:text="Summary" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttonContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="end"
            android:orientation="horizontal">

            <Button
                android:id="@+id/editReminder"
                style="@style/UiComponentActionCard.ButtonNeutral"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit" />

            <Button
                android:id="@+id/detachReminder"
                style="@style/UiComponentActionCard.ButtonPositive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/detach" />

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>
